# Docurba

./: .editorconfig  .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  Makefile  README.md  app.yaml  app_dev.yaml  docker-compose.yml  mise.local.toml.example  nuxt.config.js  package-lock.json  package.json  scalingo.json
django/: .buildpacks  .env.example  Procfile  communes.json  cron.json  groupements.json  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  scalingo.json  servers.conf.erb  supervisord.conf  test_users.json
django/config/: urls.py  wsgi.py
django/config/settings/: base.py  dev.py  test.py
django/core/: admin.py  models.py  settings.py  urls.py  views.py  wsgi.py
django/core/api_internes/: apps.py  filters.py  paginators.py  serializers.py  urls.py  views.py
django/core/management/commands/: collectivites_en_base.py  load_in_db.py  perimetres_foreign_key.py
django/core/migrations/: 0001_initial.py  0002_rename_code_insee_collectivite_code_insee_unique.py  0003_vuecollectiviteadhesionsdeep.py  0004_viewcommuneadhesionsdeep.py  0005_commune_collectivite_nouvelle_null_idx.py  0006_delete_viewcollectiviteadhesionsdeep.py  0007_add_pk_to_viewcollectiviteadhesiondeep.py  0007_alter_event_options.py  0007_alter_event_options_rename_id_collectivite_code_type.py  0008_alter_commune_intercommunalite.py  0008_auto_20260127_1022.py  0008_delete_cog.py  0008_project.py  0009_alter_commune_intercommunalite.py  0009_alter_communeprocedure_options_alter_event_options_and_more.py  0009_alter_event_options.py  0009_departement_region_collectivite_departement_region_and_more.py  0009_project.py  0010_project.py  0010_remove_commune_collectivite_nouvelle_null_idx_and_more.py  0010_remove_event_date_evenement_string_and_more.py  0011_alter_procedure_options_alter_project_options.py  0011_communeprocedure_commune_id.py  0012_json_to_jsonb.py  0013_eventssnapshot_event_insert_insert_and_more.py  0014_backfill_eventssnapshot.py  structure_prod.sql
django/core/settings/: __init__.py  base.py  dev.py  test.py
django/core/templates/: collectivite.html
django/core/tests/: conftest.py  factories.py  manual_test_e2e.py  perimetres.csv  test_e2e.py  test_models.py  test_views.py
django/core/tests/users/: test_models.py
django/docurba/core/: admin.py  apps.py  constants.py  enums.py  models.py  utils.py  views.py
django/docurba/core/data/: create_event_types.json  event_types.json  topics.json
django/docurba/core/migrations/: 0001_initial.py  0003_vuecollectiviteadhesionsdeep.py  0004_viewcommuneadhesionsdeep.py  0006_delete_viewcollectiviteadhesionsdeep.py  0008_alter_communeprocedure_options.py  0009_proceduretopic_topic_proceduretopic_topics_and_more.py  0010_alter_topic_options.py  0010_proceduretopic_created_at.py  0011_add_sudocuh_comment.py  0011_alter_topic_options.py  0011_proceduresurvey_survey_proceduresurvey_survey_and_more.py  0011_topics_rls.py  0012_proceduresurvey_survey_proceduresurvey_survey_and_more.py  0012_proceduretopic_comment.py  0013_add_sudocuh_comment.py  0013_procedure_by_collectivites_function.py  0013_survey_rls.py  (+59 more)
django/docurba/history/: admin.py  apps.py  models.py
django/docurba/internal_api/: apps.py  auth.py  filters.py  serializers.py  urls.py  views.py
django/docurba/surveys/: admin.py  apps.py  models.py
django/docurba/templates/: 404.html
django/docurba/users/: admin.py  apps.py  models.py
django/docurba/utils/: enums.py
django/exports/: README.md
django/fixtures/: create_users.py
django/internal_api/: apps.py  urls.py
django/scripts/: activate_extensions.sql  backup_database.sh  drop_update_triggers.sql  grant_usage_and_privileges.sql  rclone.conf  restore_database.sh
django/tests/: conftest.py  factories.py
django/tests/core/: factories.py  test_admin.py  test_models.py  test_views.py
django/tests/history/: test_admin.py
django/tests/internal_api/: test_auth.py  test_paginators.py  test_views.py
django/tests/surveys/: test_models.py
django/tests/users/: factories.py  test_admin.py  test_models.py
django/users/: admin.py  apps.py  enums.py  models.py
django/users/migrations/: 0001_initial.py  0002_add_column_departements.py  0003_alter_profile_options.py  0004_remove_profile_collectivite_id_profile_collectivite_and_more.py
(+1506 files in other folders)
