[project]
name = "docurba"
version = "1"
requires-python = ">=3.13"

dependencies = [
    "django",
    "django-environ",
    "django-filter",
    "gunicorn[gevent]",
    "psycopg[binary,pool]",
    "sentry-sdk[django]",
    "whitenoise[brotli]",
    "django-datadog-logger", # https://github.com/namespace-ee/django-datadog-logger
    "djangorestframework>=3.17.1",
    "supabase>=2.30.0",
]

# Scalingo command: `uv sync --locked --no-default-groups`
[dependency-groups]
dev = [
    "django-browser-reload",
    "django-debug-toolbar",
    "django-extensions",
    "django-cors-headers",
    "ptpython",
    "pytest-cov",
    "pytest>=9.0.3",
    "pytest-django",
    "ruff",
    "pre-commit>=4.6.0", # https://github.com/pre-commit/pre-commit
    "factory-boy", # https://github.com/FactoryBoy/factory_boy
]

[tool.pytest.ini_options]
addopts = "--reuse-db -x --ds=config.settings.test"
xfail_strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Missing trailing comma, conflicts with formatter
    "D10",    # Missing docstring
    "E501",   # Line too long
    "TD",     # Todos
    "PLR0913", # Too many arguments in function definition
    # "ERA001", # Commented out code
]
[tool.ruff.lint.per-file-ignores]
"**/tests/**.py" = [
    "S101",    # asserts allowed in tests...
    "PLR2004", # Magic value used in comparison
]
"**/migrations/**.py" = [
    "RUF012", # Mutable default values in class attributes
]
[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "pep257"

[tool.uv]
python-downloads = "automatic"
